--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ description: Premium and Open Source dashboard template with responsive and high
 theme-color: "#0054a6"
 
 email: support@tabler.io
-homepage: https://tabler.io
+homepage: https://app-oszkar.github.io/tabler
 github-url: https://github.com/tabler/tabler
 github-sponsors-url: https://github.com/sponsors/codecalm
 changelog-url: https://github.com/tabler/tabler/releases
